May have fixed modal bug. Which made the modal box not centered on mobile. Also fixed scroll overflow.

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -1,7 +1,3 @@
-body {
-    -ms-overflow-y: hidden;
-        overflow-y: hidden;
-}
 p {
     font-size: 20px;
     font-weight: 300;
@@ -358,8 +354,9 @@ section#portfolio {
     -webkit-border-radius: 6px;
     border-radius: 6px;
     height: 400px;
-    overflow-y: scroll;
+    overflow-y: hidden;
     margin: 0 auto;
+    z-index: 9000000000;
 }
 .separator {
     height: 1px;
